# shield-str

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md
.agents/rules/: cpp-project-rule.md
.ai/agent_log/docs/: dev_plan_shield-str.md  prd_shield-str.md
.ai/agent_log/memory/: context.md
.ai/agent_log/reports/: report_2026-05-09_001_shield-str_completion.md  report_20260509_001_shield_str_stdlib_dashboard.md  report_20260509_002_shield_str_final_release.md
.ai/agent_log/tasks/shield_str_enhancements/: 20260509_002_colon_password_and_dashboard_cases.md  20260509_003_authtoken_pattern_and_config.md  20260509_004_format_preserving_masking.md  20260509_005_dynamic_rule_injection_api.md  20260509_006_spdlog_sink_integration.md
.github/workflows/: ci.yml
.human/: prd.md
agent_log/reports/: report_20260509_02_multi_engine_integration.md
cmake/: FetchDependencies.cmake  shield-str-config.cmake.in
config/: rules.json
docs/: api-reference.md  integration-guide.md  quick-start.md  ruleset-guide.md
docs/dashboard/: app.js  index.html  style.css
examples/basic_usage/: CMakeLists.txt  main.cpp
examples/hot_reload_server/: CMakeLists.txt  main.cpp
examples/spdlog_integration/: CMakeLists.txt  main.cpp
examples/spdlog_sink/: ShieldSink.hpp
include/shield/: AhoCorasickScanner.hpp  MaskingEngine.hpp  PatternMatcher.hpp  Re2PatternMatcher.hpp  RuleManager.hpp  RuleSet.hpp  shield.hpp
include/shield/integration/: SpdlogMaskingSink.hpp
rules/: default_rules.json
src/: AhoCorasickScanner.cpp  MaskingEngine.cpp  PCRE2Wrapper.cpp  PCRE2Wrapper.hpp  PatternMatcher.cpp  Re2PatternMatcher.cpp  RuleManager.cpp  RuleSet.cpp  simdjson_impl.cpp
tests/: CMakeLists.txt
tests/bench/: CMakeLists.txt  bench_no_mask.cpp  bench_parallel.cpp  bench_with_mask.cpp
tests/unit/: test_aho_corasick.cpp  test_masking_engine.cpp  test_pattern_matcher.cpp  test_re2_matcher.cpp  test_rule_manager.cpp  test_thread_safety.cpp
